fix: enforce highest precedence CORS filter